<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.EditarPerfilFragment"
    android:orientation="vertical"
    android:background="@drawable/bg_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_perfil_negro" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CAMBIAR"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frase6"
                android:textAlignment="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|top"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/NOMBREUSUARIO"
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Usuario"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:background="#FFFFFF" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/EMAIL"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="Email"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:background="#FFFFFF" />

            <Button
                android:id="@+id/bModificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:padding="30dp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#5AAC78"
                android:textSize="40dp"
                android:text="@string/enviar" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fraseEliminar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#5AAC78"
            android:textColor="#FFFFFF"
            android:text="@string/Eliminar" />
    </LinearLayout>
    </LinearLayout>

</FrameLayout>