<resources>
    <string name="app_name">Go&amp;Enjoy</string>
    <string name="title_activity_lugares">LugaresActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_museos">Museos</string>
    <string name="menu_monumentos">Monumentos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="frase1">Pulsa en la cerveza para comenzar</string>
    <string name="frase2">¿Aun no tienes un perfil?</string>
    <string name="crear">CREAR</string>

    <string name="crearPerfil">CREAR PERFIL</string>
    <string name="NOMBREUSUARIO">NOMBRE DE USUARIO</string>
    <string name="EMAIL">CORREO ELECTRONICO</string>
    <string name="menu_fav">Favoritos</string>
    <string name="menu_deseos">Me gustaría visitar</string>
    <string name="menu_ruta">Mis rutas</string>
    <string name="cargar">CARGAR</string>
    <string name="Lunes">LUNES</string>
    <string name="title_activity_crear_ruta">CrearRutaActivity</string>
    <string name="fraseEjemplo">Contenido de la activity</string>
    <string name="frase5">CREAR NUEVA RUTA</string>
    <string name="detalle">Ver Detalles</string>
    <string name="nombreLugar">Nombre del lugar</string>
    <string name="direccionLugar">Dirección del Lugar</string>
    <string name="horarioLugar">Horario de apertura</string>
    <string name="llegar">Como llegar</string>
    <string name="details">Detalles</string>
    <string name="title_activity_detalles_lugar">DetallesLugarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Eliminar">Borrar usuario</string>
    <string name="fraseEliminar">Pulsa aquí si deseas borrar tu usuario</string>
    <string name="enviar">Crear</string>
    <string name="CAMBIAR">MI PERFIL</string>
    <string name="frase6">Introduce los nuevos valores para editar su perfil</string>
    <string name="menu_buscar">Buscar</string>
    <string name="iniciar"> Iniciar sesion </string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>