...
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center_horizontal"
                            android:layout_marginLeft="40dp">
                            <ImageView
                                android:id="@+id/iv_deseo"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/des1"></ImageView>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
...
